test fix for android keyboard covering text

--- a/src/main.scss
+++ b/src/main.scss
@@ -96,9 +96,6 @@ body, html {
       min-height: var(--scroll-min-height);
     }
   }
-  .editor-preview-side {
-    top: var(--toolbar-height);
-  }
 }
 
 .editor-preview-active, .editor-preview-active-side {
